--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@mui/styles": "^5.14.1",
     "@types/node": "20.4.2",
@@ -25,5 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^2.7.6"
   }
 }
