--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eventsource-parser": "^1.0.0",
     "next": "13.4.10",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
   },
