--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "eslint-config-next": "13.4.10",
     "eventsource-parser": "^1.0.0",
     "next": "13.4.10",
+    "openai": "^3.3.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "mini-css-extract-plugin": "^2.7.6"
+    "mini-css-extract-plugin": "^2.7.6",
+    "eventsource-parser": "^1.0.0"
   }
 }
