--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "mini-css-extract-plugin": "^2.7.6",
-    "eventsource-parser": "^1.0.0"
+    "mini-css-extract-plugin": "^2.7.6"
   }
 }
